src/objects/MakeGood__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Make Good Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Goods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NameFormula__c</fullName>
        <formula>&apos;MG&apos; + Contract__r.Project_Number__c</formula>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Make Good</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Make Good</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>